// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator > add another postcss plugin 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin.withOptions(function (_options = {}) {
  const {
    withOptionsWalkCSSRuleObject = returnSelfNoop
  } = _options;
  return function ({
    addBase: _addBase,
    addComponents: _addComponents,
    addUtilities: _addUtilities,
    theme: _theme
  }) {
    const _baseCss = withOptionsWalkCSSRuleObject({
      "h1": {
        "font-size": _theme("fontSize.2xl")
      },
      "h2": {
        "font-size": _theme("fontSize.xl")
      }
    }, "base");
    _addBase(_baseCss);
    const _componentsCss = withOptionsWalkCSSRuleObject({
      ".card": {
        "background-color": _theme("colors.white"),
        "border-radius": _theme("borderRadius.lg"),
        "padding": _theme("spacing.6"),
        "box-shadow": _theme("boxShadow.xl")
      },
      ".test": {
        "font-size": "99.6px"
      }
    }, "components");
    _addComponents(_componentsCss);
    const _utilitiesCss = withOptionsWalkCSSRuleObject({
      ".content-auto": {
        "content-visibility": "\\"auto\\""
      }
    }, "utilities");
    _addUtilities(_utilitiesCss);
  };
}, function (_options) {
  return {};
});
module.exports = css2TwPlugin;"
`;

exports[`generator > apply case 0 > css 1`] = `
"*, ::before, ::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.a {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity));
    --tw-text-opacity: 1;
    color: rgb(18 52 86 / var(--tw-text-opacity));
    font-size: 1.25rem
}
"
`;

exports[`generator > apply case 0 > generate 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({});
  _addUtilities({
    ".a": {
      "--tw-bg-opacity": "1",
      "background-color": "rgb(18 52 86 / var(--tw-bg-opacity))",
      "--tw-text-opacity": "1",
      "color": "rgb(18 52 86 / var(--tw-text-opacity))",
      "font-size": "1.25rem"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > apply case 1 > css 1`] = `
"*, ::before, ::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.a {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity));
    --tw-text-opacity: 1;
    color: rgb(18 52 86 / var(--tw-text-opacity));
    font-size: 1.25rem
}"
`;

exports[`generator > apply case 1 > generate 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({});
  _addUtilities({
    ".a": {
      "--tw-bg-opacity": "1",
      "background-color": "rgb(18 52 86 / var(--tw-bg-opacity))",
      "--tw-text-opacity": "1",
      "color": "rgb(18 52 86 / var(--tw-text-opacity))",
      "font-size": "1.25rem"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > apply case 2 > css 1`] = `
"
  .a {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity));
    --tw-text-opacity: 1;
    color: rgb(18 52 86 / var(--tw-text-opacity));
    font-size: 1.25rem
}"
`;

exports[`generator > apply case 2 > generate 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({});
  _addUtilities({
    ".a": {
      "--tw-bg-opacity": "1",
      "background-color": "rgb(18 52 86 / var(--tw-bg-opacity))",
      "--tw-text-opacity": "1",
      "color": "rgb(18 52 86 / var(--tw-text-opacity))",
      "font-size": "1.25rem"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > apply case weapp-tailwindcss/issues/271 > css 1`] = `
"
  .center {
    display: flex;
    align-items: center;
    justify-content: center
}"
`;

exports[`generator > apply case weapp-tailwindcss/issues/271 > generate 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({});
  _addUtilities({
    ".center": {
      "display": "flex",
      "align-items": "center",
      "justify-content": "center"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > double-bug 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({});
  _addUtilities({
    ".content-auto": {
      "content-visibility": "\\"auto\\""
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({});
  _addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate case 0 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({
    "h1": {
      "font-size": _theme("fontSize.2xl")
    },
    "h2": {
      "font-size": _theme("fontSize.xl")
    }
  });
  _addComponents({
    ".card": {
      "background-color": _theme("colors.white"),
      "border-radius": _theme("borderRadius.lg"),
      "padding": _theme("spacing.6"),
      "box-shadow": _theme("boxShadow.xl")
    }
  });
  _addUtilities({
    ".content-auto": {
      "content-visibility": "\\"auto\\""
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate case 0 sync 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({
    "h1": {
      "font-size": _theme("fontSize.2xl")
    },
    "h2": {
      "font-size": _theme("fontSize.xl")
    }
  });
  _addComponents({
    ".card": {
      "background-color": _theme("colors.white"),
      "border-radius": _theme("borderRadius.lg"),
      "padding": _theme("spacing.6"),
      "box-shadow": _theme("boxShadow.xl")
    }
  });
  _addUtilities({
    ".content-auto": {
      "content-visibility": "\\"auto\\""
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate case 0 withOptions 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin.withOptions(function (_options = {}) {
  const {
    withOptionsWalkCSSRuleObject = returnSelfNoop
  } = _options;
  return function ({
    addBase: _addBase,
    addComponents: _addComponents,
    addUtilities: _addUtilities,
    theme: _theme
  }) {
    const _baseCss = withOptionsWalkCSSRuleObject({
      "h1": {
        "font-size": _theme("fontSize.2xl")
      },
      "h2": {
        "font-size": _theme("fontSize.xl")
      }
    }, "base");
    _addBase(_baseCss);
    const _componentsCss = withOptionsWalkCSSRuleObject({
      ".card": {
        "background-color": _theme("colors.white"),
        "border-radius": _theme("borderRadius.lg"),
        "padding": _theme("spacing.6"),
        "box-shadow": _theme("boxShadow.xl")
      }
    }, "components");
    _addComponents(_componentsCss);
    const _utilitiesCss = withOptionsWalkCSSRuleObject({
      ".content-auto": {
        "content-visibility": "\\"auto\\""
      }
    }, "utilities");
    _addUtilities(_utilitiesCss);
  };
}, function (_options) {
  return {};
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate case 1 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({
    ".card0": {
      "background-color": _theme("colors.white"),
      "border-radius": _theme("borderRadius.lg"),
      "padding": _theme("spacing.6"),
      "box-shadow": _theme("boxShadow.xl")
    },
    ".card1": {
      "background-color": _theme("colors.white"),
      "border-radius": _theme("borderRadius.lg"),
      "padding": _theme("spacing.6"),
      "box-shadow": _theme("boxShadow.xl")
    },
    ".content-area0": {
      "height": \`calc(100vh - \${_theme("spacing.12")})\`
    },
    ".content-area1": {
      "height": \`calc(100vh - \${_theme("spacing[2.5]")})\`
    },
    ".btn-blue0": {
      "background-color": _theme("colors.blue.500")
    },
    ".btn-blue1": {
      "background-color": _theme("colors.blue.500 / 75%")
    }
  });
  _addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate case 2 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({
    "h1": {
      "font-size": _theme("fontSize.2xl")
    },
    "h2": {
      "font-size": _theme("fontSize.xl")
    },
    ".card1": {
      "padding": _theme("spacing.6"),
      "box-shadow": _theme("boxShadow.xl")
    }
  });
  _addComponents({
    ".card": {
      "background-color": _theme("colors.white"),
      "border-radius": _theme("borderRadius.lg"),
      "padding": _theme("spacing.6"),
      "box-shadow": _theme("boxShadow.xl")
    }
  });
  _addUtilities({
    ".content-auto": {
      "content-visibility": "\\"auto\\""
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate common.scss 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin.withOptions(function (_options = {}) {
  const {
    withOptionsWalkCSSRuleObject = returnSelfNoop
  } = _options;
  return function ({
    addBase: _addBase,
    addComponents: _addComponents,
    addUtilities: _addUtilities,
    theme: _theme
  }) {
    const _baseCss = withOptionsWalkCSSRuleObject({
      "h1": {
        "font-size": _theme("fontSize.2xl")
      },
      "h2": {
        "font-size": _theme("fontSize.xl")
      }
    }, "base");
    _addBase(_baseCss);
    const _componentsCss = withOptionsWalkCSSRuleObject({
      ".card": {
        "background-color": _theme("colors.white"),
        "border-radius": _theme("borderRadius.lg"),
        "padding": _theme("spacing.6"),
        "box-shadow": _theme("boxShadow.xl")
      }
    }, "components");
    _addComponents(_componentsCss);
    const _utilitiesCss = withOptionsWalkCSSRuleObject({
      ".content-auto": {
        "content-visibility": "\\"auto\\""
      }
    }, "utilities");
    _addUtilities(_utilitiesCss);
  };
}, function (_options) {
  return {};
});
module.exports = css2TwPlugin;"
`;

exports[`generator > import case 0 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({
    "h3": {
      "font-size": _theme("fontSize.2xl")
    },
    "h4": {
      "font-size": _theme("fontSize.xl")
    },
    "h1": {
      "font-size": _theme("fontSize.2xl")
    },
    "h2": {
      "font-size": _theme("fontSize.xl")
    }
  });
  _addComponents({
    ".card-imported": {
      "background-color": _theme("colors.white"),
      "border-radius": _theme("borderRadius.lg"),
      "padding": _theme("spacing.6"),
      "box-shadow": _theme("boxShadow.xl")
    },
    ".card": {
      "background-color": _theme("colors.white"),
      "border-radius": _theme("borderRadius.lg"),
      "padding": _theme("spacing.6"),
      "box-shadow": _theme("boxShadow.xl")
    }
  });
  _addUtilities({
    ".content-auto-imported": {
      "content-visibility": "\\"auto\\""
    },
    ".content-auto": {
      "content-visibility": "\\"auto\\""
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > import case 0 with tailwindcss config 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({
    "h3": {
      "font-size": "1.5rem"
    },
    "h4": {
      "font-size": "1.25rem"
    },
    "h1": {
      "font-size": "1.5rem"
    },
    "h2": {
      "font-size": "1.25rem"
    }
  });
  _addComponents({
    ".card-imported": {
      "background-color": "#fff",
      "border-radius": "0.5rem",
      "padding": "1.5rem",
      "box-shadow": "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)"
    },
    ".card": {
      "background-color": "#fff",
      "border-radius": "0.5rem",
      "padding": "1.5rem",
      "box-shadow": "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)"
    }
  });
  _addUtilities({
    ".content-auto-imported": {
      "content-visibility": "\\"auto\\""
    },
    ".content-auto": {
      "content-visibility": "\\"auto\\""
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > import case 0 with tailwindcss config case > css 1`] = `
"*, ::before, ::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
}
h3 {
    font-size: 1.5rem;
  }
h4 {
    font-size: 1.25rem;
  }
.card-imported {
    background-color: #fff;
    border-radius: 0.5rem;
    padding: 1.5rem;
    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  }
.content-auto-imported {
    content-visibility: "auto";
  }
h1 {
    font-size: 1.5rem;
  }
h2 {
    font-size: 1.25rem;
  }
.card {
    background-color: #fff;
    border-radius: 0.5rem;
    padding: 1.5rem;
    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  }
.content-auto {
    content-visibility: "auto";
  }
"
`;

exports[`generator > import case 0 with tailwindcss config case > generate 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({
    "h3": {
      "font-size": "1.5rem"
    },
    "h4": {
      "font-size": "1.25rem"
    },
    "h1": {
      "font-size": "1.5rem"
    },
    "h2": {
      "font-size": "1.25rem"
    }
  });
  _addComponents({
    ".card-imported": {
      "background-color": "#fff",
      "border-radius": "0.5rem",
      "padding": "1.5rem",
      "box-shadow": "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)"
    },
    ".card": {
      "background-color": "#fff",
      "border-radius": "0.5rem",
      "padding": "1.5rem",
      "box-shadow": "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)"
    }
  });
  _addUtilities({
    ".content-auto-imported": {
      "content-visibility": "\\"auto\\""
    },
    ".content-auto": {
      "content-visibility": "\\"auto\\""
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > import case 0 with tailwindcss config case with content > css 1`] = `
"*, ::before, ::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
}
h3 {
    font-size: 1.5rem;
  }
h4 {
    font-size: 1.25rem;
  }
.card-imported {
    background-color: #fff;
    border-radius: 0.5rem;
    padding: 1.5rem;
    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  }
.content-auto-imported {
    content-visibility: "auto";
  }
h1 {
    font-size: 1.5rem;
  }
h2 {
    font-size: 1.25rem;
  }
.card {
    background-color: #fff;
    border-radius: 0.5rem;
    padding: 1.5rem;
    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  }
.content-auto {
    content-visibility: "auto";
  }
"
`;

exports[`generator > import case 0 with tailwindcss config case with content > generate 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({
    "h3": {
      "font-size": "1.5rem"
    },
    "h4": {
      "font-size": "1.25rem"
    },
    "h1": {
      "font-size": "1.5rem"
    },
    "h2": {
      "font-size": "1.25rem"
    }
  });
  _addComponents({
    ".card-imported": {
      "background-color": "#fff",
      "border-radius": "0.5rem",
      "padding": "1.5rem",
      "box-shadow": "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)"
    },
    ".card": {
      "background-color": "#fff",
      "border-radius": "0.5rem",
      "padding": "1.5rem",
      "box-shadow": "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)"
    }
  });
  _addUtilities({
    ".content-auto-imported": {
      "content-visibility": "\\"auto\\""
    },
    ".content-auto": {
      "content-visibility": "\\"auto\\""
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > interceptors css 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({
    "h1": {
      "font-size": _theme("fontSize.2xl")
    },
    "h2": {
      "font-size": _theme("fontSize.xl")
    },
    ".test": {
      "font-size": "99.6px"
    }
  });
  _addComponents({
    ".card": {
      "background-color": _theme("colors.white"),
      "border-radius": _theme("borderRadius.lg"),
      "padding": _theme("spacing.6"),
      "box-shadow": _theme("boxShadow.xl")
    }
  });
  _addUtilities({
    ".content-auto": {
      "content-visibility": "\\"auto\\""
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > makeObjectExpression case 0 1`] = `
"{
  "h1": {
    "font-size": _theme("fontSize.2xl")
  },
  "h2": {
    "font-size": _theme("fontSize.xl")
  }
}"
`;

exports[`generator > repeat css case 0 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({
    ".a": {
      "width": "100%",
      "font-size": "100px",
      "color": "#989898 !important",
      "background": "#cccccc !important"
    }
  });
  _addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > repeat css case 1 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({
    ".a": {
      "width": "100%",
      "transition": "transform 0.3 ease-in-out",
      "font-size": "100px",
      "color": "#989898 !important",
      "background": "#cccccc !important"
    },
    ".a:focus": {
      "background": "#000"
    },
    ".a:hover": {
      "transform": "scale(-10px)"
    },
    ".a > .a": {
      "margin-top": "10px"
    }
  });
  _addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > theme case 0 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({
    ".content-area0": {
      "height": \`calc(100vh - \${_theme("spacing.12")})\`
    },
    ".content-area1": {
      "height": \`calc(100vh - \${_theme("spacing[2.5]")})\`
    }
  });
  _addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > theme case 1 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({
    ".content-area0": {
      "height": \`calc(100vh - \${_theme("spacing.12")} - \${_theme("spacing.1")})\`
    },
    ".content-area1": {
      "height": \`calc(100vh - \${_theme("spacing[2.5]")} + \${_theme("spacing.6")})\`
    }
  });
  _addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > theme case 2 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({});
  _addUtilities({
    ".a": {
      "font-size": _theme("fontSize.xl")
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > theme case 3 1`] = `
"const _plugin = require("tailwindcss/plugin");
const returnSelfNoop = x => x;
const css2TwPlugin = _plugin(function ({
  addBase: _addBase,
  addComponents: _addComponents,
  addUtilities: _addUtilities,
  theme: _theme
}) {
  _addBase({});
  _addComponents({
    ".a": {
      "font-size": _theme("fontSize.3xl") + " !important"
    }
  });
  _addUtilities({});
});
module.exports = css2TwPlugin;"
`;
